# max2tg

./: .gitignore  AGENTS.md  README.md  config.example.yaml  plan.md  pyproject.toml
src/max2tg/: __init__.py  __main__.py  bridge.py  cli.py  client.py  db.py  max_bridge.py  pymax_patches.py  register.py  tg_bridge.py
src/max2tg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_db.py  test_max_bridge.py  test_tg_bridge.py
