[project]
name = "max2tg"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "maxapi-python @ git+https://github.com/dimonb/PyMax.git@main",
    "textual>=8.1.1",
    "pyyaml>=6.0",
    "aiogram>=3.26",
    "aiosqlite>=0.21",
    "aiohttp>=3.9",
]

[project.scripts]
max2tg     = "max2tg.bridge:main"
max2tg-cli = "max2tg.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pytest-asyncio]
asyncio_mode = "auto"
